--- a/assets-boolzapp/css/main.css
+++ b/assets-boolzapp/css/main.css
@@ -8,4 +8,16 @@ body{
     font-family: 'Lato', sans-serif;
     height: 100vh;
     background-image: linear-gradient(#128C7E 15%, #ECE5DD 11%, silver 80%);
-}
+    display:flex;
+    justify-content: center;
+    align-items: center;
+};
+
+.container{
+    display: flex;
+    width:80%;
+    min-width:900px;
+    height:90%;
+    background:white;
+};
+
