--- a/assets-boolzapp/css/main.css
+++ b/assets-boolzapp/css/main.css
@@ -8,10 +8,7 @@ body{
     font-family: 'Lato', sans-serif;
     height: 100vh;
     background-image: linear-gradient(#128C7E 15%, #ECE5DD 11%, silver 80%);
-    display:flex;
-    justify-content: center;
-    align-items: center;
-};
+}
 
 .container{
     display: flex;
@@ -19,5 +16,6 @@ body{
     min-width:900px;
     height:90%;
     background:white;
-};
+}
+
 
