--- a/assets-boolzapp/css/main.css
+++ b/assets-boolzapp/css/main.css
@@ -7,7 +7,10 @@
 body{
     font-family: 'Lato', sans-serif;
     height: 100vh;
-    background-image: linear-gradient(#128C7E 15%, #ECE5DD 11%, silver 80%);
+    background-image: linear-gradient(#128C7E 15%, #ECE5DD 11%, rgb(205, 212, 218) 80%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .container{
