--- a/assets-boolzapp/css/main.css
+++ b/assets-boolzapp/css/main.css
@@ -21,4 +21,33 @@ body{
     background:white;
 }
 
+.side{
+    flex-basis: 40%;
+    background: white;
+}
+
+/*Content */
+
+.contenuto{
+    flex-basis: 60%;
+    background: rgb(27, 209, 112);
+    display: flex;
+    flex-direction: column;
+}
+
+.contenuto-header,
+.contenuto-footer{
+    padding:26px;
+    background:#f0f0f0;
+}
+.contenuto-main{
+    flex-grow: 1;
+    padding: 20px;
+    overflow-y: auto;
+}
+.content.main p{
+    margin-bottom: 20px;
+}
+
+
 
