--- a/assets-boolzapp/css/main.css
+++ b/assets-boolzapp/css/main.css
@@ -22,30 +22,31 @@ body{
 }
 
 .side{
-    flex-basis: 40%;
+    flex-basis: 35%;
     background: white;
 }
 
 /*Content */
 
-.contenuto{
-    flex-basis: 60%;
+.chat{
+    flex-basis: 65%;
     background: rgb(27, 209, 112);
     display: flex;
     flex-direction: column;
 }
 
-.contenuto-header,
-.contenuto-footer{
+.chat-header,
+.chat-footer{
     padding:26px;
     background:#f0f0f0;
 }
-.contenuto-main{
+.chat-main{
     flex-grow: 1;
     padding: 20px;
     overflow-y: auto;
+    background-image: url(../img/mine.jpg);
 }
-.contenuto-main p{
+.chat-main p{
     margin-bottom: 20px;
 }
 
