--- a/assets-boolzapp/css/main.css
+++ b/assets-boolzapp/css/main.css
@@ -32,14 +32,13 @@ body{
     border-bottom:1px solid rgb(211 211 211);
     border-right:1px solid rgb(211 211 211);
     display: flex;
-   justify-content: flex-start;
+    justify-content: flex-start;
 }
 
 
 .image-user{
     background-color: rgb(255, 255, 255);
     padding: 10px 25px 15px 20px;
-    
     border-radius: 50%;
     margin-right: 10px;
     background-image: url(../img/avatar_2.jpg);
@@ -49,18 +48,22 @@ body{
 
 .ul-user{
     list-style: none;
-    margin-left: 100px;
+    margin-left: 150px;
 }
 .li-user{
     display: inline-block;
-    margin: 0 5px;
+    margin: 0 7px;
+}
+i{
+    color:silver
 }
 
 
 /*notification*/
 .notification{
-    padding:20px 5px;
-    background: rgb(32, 173, 216);
+    
+    background-color:  #0db2fa6b;
+    padding:15px 0px 0px 5px;
     display: flex;
     justify-content: flex-start;
 }
@@ -73,6 +76,16 @@ body{
     margin-left: 10px;
     
 }
+.bell{
+    color:#0db2fa6b ;
+}
+.li-not{
+    list-style: none;
+    margin-bottom: 5px;
+}
+.li-not:nth-child(3){
+    margin-top: 3px;
+}
 /*serach bar*/
 .search-bar{
     padding:10px;
@@ -81,16 +94,37 @@ body{
 /*contacts*/
 .contacts{
     flex-grow: 1;
-    overflow-y: auto;  
+    overflow-y: auto; 
+    
 }
 
 .contact{
-    padding: 23px 5px;
-    background: rgb(243 244 246);
-    border-bottom: 1px solid rgb(211 211 211);
+    padding: 10px 5px;
+    background:white;
+    border-bottom: 1px solid rgb(211 211 211); 
+    display:flex 
 }
 
+.contact:last-child{
+    border-bottom: none;
+}
 
+.image-contact{
+    background-color: rgb(255, 255, 255);
+    padding: 10px 25px 15px 20px;
+    border-radius: 50%;
+    margin-right: 10px; 
+}
+
+.img-contact{
+    width:45px;
+    border:1px solid rgb(243 244 246);
+    border-radius: 50%;
+}
+
+.name-contact{
+    padding:10px;
+}
 
 
 /*Chat */
@@ -102,11 +136,20 @@ body{
     flex-direction: column;
 }
 
+/*header*/
+
 .chat-header,
 .chat-footer{
     padding:26px;
     background:#f0f0f0;
+    display: flex;
+    justify-content: flex-start;
 }
+
+.chat-header{
+    padding:10px;
+}
+
 
 .chat-main{
     flex-grow: 1;
@@ -119,5 +162,15 @@ body{
     margin-bottom: 20px;
 }
 
+ .ul-header{
+     margin-left: 480px;
+     
+ }
+
+ .li-header{
+    list-style: none;
+    display: inline-block;
+    padding: 10px 
+ }
 
 
