--- a/assets-boolzapp/css/main.css
+++ b/assets-boolzapp/css/main.css
@@ -27,25 +27,20 @@ body{
 }
 
 .user-header{
-    padding:24px 5px;
+    padding:10px 5px;
     background:#f0f0f0;
     border-bottom:1px solid rgb(211 211 211);
     border-right:1px solid rgb(211 211 211);
     display: flex;
-    justify-content: flex-start;
+    align-items: center;
 }
 
 
-.image-user{
-    background-color: rgb(255, 255, 255);
-    padding: 10px 25px 15px 20px;
+.user-avatar{
+    width:45px;
     border-radius: 50%;
-    margin-right: 10px;
-    background-image: url(../img/avatar_2.jpg);
-    background-size: 100%;
+    margin-right: 5px;
 }
-
-
 .ul-user{
     list-style: none;
     margin-left: 200px;
@@ -121,6 +116,8 @@ i{
     background:white;
     border-bottom: 1px solid rgb(211 211 211); 
     display:flex 
+}.contact:hover{
+    background:#e2e7e6
 }
 
 .contact:last-child{
@@ -161,6 +158,7 @@ i{
     background:#f0f0f0;
     display: flex;
     justify-content: flex-start;
+    align-items: center;
 }
 
 .chat-header{
