--- a/assets-boolzapp/css/main.css
+++ b/assets-boolzapp/css/main.css
@@ -65,7 +65,7 @@ i{
 
 .notice{
     background-color: rgb(255, 255, 255);
-    padding: 10px 12px 10px 12px;
+    padding: 6px 12px 6px 12px;
     border-radius: 50%;
     margin-right: 10px;
     margin-left: 10px;
@@ -234,7 +234,7 @@ i{
      justify-content: space-between;
  }
 
- .new-messagge{
+ .new-message{
      width:80%;
      padding:10px;
      border-radius: 5px;
